--- a/index.html
+++ b/index.html
@@ -3,10 +3,18 @@
     <head>
         <meta charset="utf-8">
         <link rel="stylesheet" href="main.css">
-        <title></title>
+        <title>Bay Valley Tech Login Page</title>
     </head>
     <body>
-
+        <div id="main-box">
+        <h3>Sign In</h3>    
+        <form id="login">
+            <input type="text" id="username" placeholder="username">
+            <input type="password" id="password" placeholder="password">
+            <input type="button" id="sign-in" value="Sign In">
+        </form>
+        </main>
+        </div>
     </body>
 </html>
 
