--- a/index.html
+++ b/index.html
@@ -2,18 +2,23 @@
 <html>
     <head>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="main.css">
         <title>Bay Valley Tech Login Page</title>
     </head>
     <body>
-        <div id="main-box">
-        <h3>Sign In</h3>    
-        <form id="login">
-            <input type="text" id="username" placeholder="username">
-            <input type="password" id="password" placeholder="password">
-            <input type="button" id="sign-in" value="Sign In">
-        </form>
-        </main>
+        <div id="container">   
+            <div id="login-form">
+                <h3>Sign In</h3>
+
+                <label>username</label>
+                <input type="username">
+
+                <label>password</label>
+                <input type="password">
+
+                <button>sign in</button>
+            </div>
         </div>
     </body>
 </html>
