--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <body>
         <div id="container">   
             <div id="login-form">
+                <div>
                 <h3>Sign In</h3>
 
                 <label>username</label>
@@ -18,6 +19,7 @@
                 <input type="password">
 
                 <button>sign in</button>
+                </div>
             </div>
         </div>
     </body>
